@@ -7,7 +7,9 @@ else (${_option})
   message(STATUS "Not building ${_name} plugin (-D${_option}=true to enable)")
 endif (${_option})
 ENDMACRO (MACRO_KT_PLUGIN)
+
 find_package(Taglib)
+
 macro_kt_plugin(ENABLE_LOGVIEWER_PLUGIN logviewer logviewer)
 macro_kt_plugin(ENABLE_INFOWIDGET_PLUGIN infowidget infowidget)
 macro_kt_plugin(ENABLE_UPNP_PLUGIN upnp upnp)
@@ -25,3 +27,4 @@ macro_kt_plugin(ENABLE_SYNDICATION_PLUGIN syndication syndication)
 macro_kt_plugin(ENABLE_DOWNLOADORDER_PLUGIN downloadorder downloadorder)
 macro_kt_plugin(ENABLE_SHUTDOWN_PLUGIN shutdown shutdown)
 macro_kt_plugin(ENABLE_ZEROCONF_PLUGIN zeroconf zeroconf)
+macro_kt_plugin(ENABLE_MAGNETGENERATOR_PLUGIN magnetgenerator magnetgenerator)
