@@ -1,0 +1,7 @@
+# Code generation options for kconfig_compiler
+File=ktmagnetgeneratorplugin.kcfg
+ClassName=MagnetGeneratorPluginSettings
+Namespace=kt
+Singleton=true
+Mutators=true
+# will create the necessary code for setting those variables
