@@ -1,0 +1,124 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
+ <class>MagnetGeneratorPrefWidget</class>
+ <widget class="QWidget" name="MagnetGeneratorPrefWidget">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>459</width>
+    <height>317</height>
+   </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>0</height>
+   </size>
+  </property>
+  <property name="windowTitle">
+   <string>Magnet Generator Preferences</string>
+  </property>
+  <layout class="QVBoxLayout" name="verticalLayout_x3">
+   <item>
+    <widget class="QGroupBox" name="groupBox_x2">
+     <property name="title">
+      <string>Magnet Generator</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_x2">
+      <item>
+       <layout class="QGridLayout">
+	    <item row="1" column="0">
+		 <widget class="QCheckBox" name="kcfg_tracker">
+		  <property name="toolTip">
+		   <string>Toggles if the tracker will be a part of the magnet link</string>
+		  </property>
+		  <property name="text">
+		   <string>Add tracker</string>
+		  </property>
+		 </widget>
+		</item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="textLabelx5">
+          <property name="text">
+           <string>Tracker:</string>
+          </property>
+          <property name="wordWrap">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QLineEdit" name="kcfg_tr">
+          <property name="toolTip">
+           <string>The tracker URL that will be a part of the magnet link</string>
+          </property>
+         </widget>
+        </item>
+		<item row="3" column="0">
+		 <widget class="QCheckBox" name="kcfg_dn">
+		  <property name="toolTip">
+		   <string>Add the torrent name in the URI</string>
+		  </property>
+		  <property name="text">
+		   <string>Add name</string>
+		  </property>
+		 </widget>
+		</item>
+		<!-- <item row="4" column="0">
+		 <widget class="QCheckBox" name="kcfg_clipboard">
+		  <property name="toolTip">
+		   <string>Copy the generated URI to the clipboard</string>
+		  </property>
+		  <property name="text">
+		   <string>Copy to clipboard</string>
+		  </property>
+		 </widget>
+		</item>
+		<item row="5" column="0">
+	     <widget class="QCheckBox" name="kcfg_popup">
+		  <property name="toolTip">
+		   <string>Display a popup with the URI</string>
+		  </property>
+		  <property name="text">
+		   <string>Show popup</string>
+		  </property>
+		 </widget>
+		</item>-->
+       </layout>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <spacer>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+  </layout>
+ </widget>
+ <layoutdefault spacing="6" margin="11"/>
+ <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <includes>
+  <include location="local">klineedit.h</include>
+  <include location="local">kurlrequester.h</include>
+  <include location="local">kpushbutton.h</include>
+  <include location="local">kled.h</include>
+ </includes>
+ <resources/>
+ <connections/>
+</ui>
