@@ -42,6 +42,7 @@ Changes in 4.0beta2:
 - Add support for the µTP protocol (197749)
 - Fix crash in HTTPConnection due to 0 pointer (231859)
 - Add patch to disable authentication in webinterface (226291)
+- Add plugin to generate magnet URI's
 
 Changes in 4.0beta1:
 - Make adding multiple trackers at once possible (213194) 
